--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,6 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "bora.ozdek@metu.edu.tr"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook: deanattali
   github: boraaoz
   twitter: boraaoz
@@ -69,7 +68,7 @@ social-network-links:
 #  twitch: yourname
 #  yelp: yourname
 #  telegram: yourname
-#  calendly: yourname
+  calendly: boraoz
 #  mastodon: instance.url/@username
 #  bluesky: yourname
 #  ORCID: your ORCID ID
